--- a/app/src/main/res/layout/row_edit_toc_entry.xml
+++ b/app/src/main/res/layout/row_edit_toc_entry.xml
@@ -28,22 +28,12 @@
     android:minHeight="?attr/listPreferredItemHeightSmall"
     >
 
-    <ImageButton
-        android:id="@id/ROW_DELETE_BTN"
-        style="@style/RowEditor.Button.Delete"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/ROW_ONCLICK_TARGET"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription"
-        />
-
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@id/ROW_ONCLICK_TARGET"
         style="@style/RowEditor.TextSection"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/ROW_GRABBER_ICON"
-        app:layout_constraintStart_toEndOf="@id/ROW_DELETE_BTN"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         >
 
@@ -51,6 +41,7 @@
             android:id="@+id/title"
             style="@style/RowEditor.Text.Primary"
             android:layout_width="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:ignore="SelectableText"
@@ -70,6 +61,7 @@
             android:id="@+id/author"
             style="@style/RowEditor.Text.Secondary"
             android:layout_width="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/year"
             app:layout_constraintTop_toBottomOf="@id/title"
             tools:ignore="SelectableText"
@@ -81,10 +73,19 @@
         android:id="@id/ROW_GRABBER_ICON"
         style="@style/RowEditor.Button.DragHandle"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_row_menu"
         app:layout_constraintStart_toEndOf="@id/ROW_ONCLICK_TARGET"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription"
         />
 
+    <Button
+        android:id="@+id/btn_row_menu"
+        style="@style/Button.More"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
