Button.More color adjust

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -219,7 +219,7 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="icon">@drawable/ic_baseline_more_vert_24</item>
-        <item name="android:backgroundTint">?attr/colorSurfaceVariant</item>
+        <item name="iconTint">?attr/colorOnPrimaryContainer</item>
         <item name="android:scaleX">0.75</item>
         <item name="android:scaleY">0.75</item>
     </style>
