scaling the context menu button

--- a/app/src/main/res/values-sw600dp/dimens.xml
+++ b/app/src/main/res/values-sw600dp/dimens.xml
@@ -34,4 +34,9 @@
 
     <dimen name="scrollbar_padding">10dp</dimen>
 
+    <item name="btn_context_menu_scale"
+          format="float"
+          type="dimen">0.75
+    </item>
+
 </resources>
