--- a/app/src/main/res/layout/fragment_sync_import.xml
+++ b/app/src/main/res/layout/fragment_sync_import.xml
@@ -108,7 +108,7 @@
             app:layout_constraintTop_toBottomOf="@id/cbx_books"
             />
 
-        <ImageButton
+        <Button
             android:id="@+id/inf_import_new_only"
             style="@style/Button.InfoPopup"
             android:contentDescription="@string/option_info_import_books_option_new_only"
@@ -127,7 +127,7 @@
             app:layout_constraintTop_toBottomOf="@id/rb_import_new_only"
             />
 
-        <ImageButton
+        <Button
             android:id="@+id/inf_import_new_and_updated"
             style="@style/Button.InfoPopup"
             android:contentDescription="@string/option_info_import_books_option_new_and_updated"
@@ -145,7 +145,7 @@
             app:layout_constraintTop_toBottomOf="@id/rb_import_new_and_updated"
             />
 
-        <ImageButton
+        <Button
             android:id="@+id/inf_import_all"
             style="@style/Button.InfoPopup"
             android:contentDescription="@string/option_info_import_books_option_all"
