--- a/app/src/main/res/layout/row_author_work.xml
+++ b/app/src/main/res/layout/row_author_work.xml
@@ -43,16 +43,17 @@
             android:minHeight="?attr/listPreferredItemHeightSmall"
             >
 
-            <ImageButton
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_type"
+                style="@style/Widget.Material3.Button.IconButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@android:color/transparent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                tools:icon="@drawable/ic_baseline_menu_book_24"
                 tools:ignore="ContentDescription"
-                tools:src="@drawable/ic_baseline_menu_book_24"
                 />
 
             <!-- android:textIsSelectable="false" because we want to be able to click on the row -->
