--- a/app/src/main/res/layout/row_edit_bookshelf_filter_bitmask.xml
+++ b/app/src/main/res/layout/row_edit_bookshelf_filter_bitmask.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  ~ @Copyright 2018-2021 HardBackNutter
+  ~ @Copyright 2018-2022 HardBackNutter
   ~ @License GNU General Public License
   ~
   ~ This file is part of NeverTooManyBooks.
@@ -29,7 +29,7 @@
     android:minHeight="?attr/listPreferredItemHeightSmall"
     >
 
-    <ImageButton
+    <Button
         android:id="@+id/btn_del"
         style="@style/RowEditor.Button.Delete"
         app:layout_constraintStart_toStartOf="parent"
