--- a/app/src/main/res/layout/fragment_edit_book_toc.xml
+++ b/app/src/main/res/layout/fragment_edit_book_toc.xml
@@ -34,7 +34,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lbl_book_type"
-            style="@style/TIL.DropdownMenu.Outline.Dense"
+            style="@style/TIL.AutoCompleteTextView"
             android:hint="@string/lbl_book_type"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
