--- a/app/src/main/res/layout-sw800dp-land/fragment_edit_book_publication.xml
+++ b/app/src/main/res/layout-sw800dp-land/fragment_edit_book_publication.xml
@@ -328,7 +328,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lbl_condition"
-            style="@style/TIL.DropdownMenu.Outline.Dense"
+            style="@style/TIL.AutoCompleteTextView"
             android:hint="@string/lbl_condition"
             app:layout_constraintEnd_toStartOf="@id/col2"
             app:layout_constraintStart_toStartOf="@id/col1"
@@ -348,7 +348,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lbl_condition_cover"
-            style="@style/TIL.DropdownMenu.Outline.Dense"
+            style="@style/TIL.AutoCompleteTextView"
             android:hint="@string/lbl_dust_cover"
             app:layout_constraintEnd_toStartOf="@id/col2"
             app:layout_constraintStart_toStartOf="@id/col1"
