--- a/app/src/main/res/layout/fragment_edit_book_notes.xml
+++ b/app/src/main/res/layout/fragment_edit_book_notes.xml
@@ -151,7 +151,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lbl_condition"
-            style="@style/TIL.DropdownMenu.Outline.Dense"
+            style="@style/TIL.AutoCompleteTextView"
             android:hint="@string/lbl_condition"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -171,7 +171,7 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/lbl_condition_cover"
-            style="@style/TIL.DropdownMenu.Outline.Dense"
+            style="@style/TIL.AutoCompleteTextView"
             android:hint="@string/lbl_dust_cover"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
